--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="intro">
   		<div class="center-content">
   			<div class="intro-content text-center">	
-  				<h2 class="maintitle">ROctopus</h2>
+  				<h2 class="maintitle">rocto</h2>
   				<h1 class="subtitle">coming soon</h1>
           <p id="maincontent"></p>
   			</div>
