--- a/index.html
+++ b/index.html
@@ -2,43 +2,46 @@
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>rocto</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="./favicon.png" sizes="256x256">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-      crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
 
-    <!--[if lt IE 9]>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>rocto</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="./favicon.png" sizes="256x256">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main.css">
+
+  <!--[if lt IE 9]>
   	 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   	<![endif]-->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
-      
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js" crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
+
 </head>
+
 <body>
-<!-- === Header Section === -->
-<div id="container">
-    <section class="intro">
-  		<div class="center-content">
-  			<div class="intro-content text-center">	
-  				<h2 class="maintitle">rocto</h2>
-  				<h1 class="subtitle">coming soon</h1>
-          <p id="maincontent"></p>
-  			</div>
-  		</div>
-    </section>
-</div>
+  <!-- === Header Section === -->
+
+  <div class="intro">
+    <div class="center-content">
+      <div class="intro-content text-center">
+        <h2 class="maintitle">rocto</h2>
+        <h1 class="subtitle">coming soon</h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="maincontent"></div>
+
+
 </body>
+
 </html>
