Update output box

--- a/ui.html
+++ b/ui.html
@@ -78,7 +78,8 @@
   
   <div class="row top-buffer">
     <div class="col-md-6">
-      <textarea class="form-control resizev console-style" rows="10" cols="40" id="output" disabled>a;ksdjf;laksjdf;lkajsdf</textarea>
+      <textarea class="form-control resizev console-style" rows="10" cols="40" id="output" disabled>Output will show here
+</textarea>
     </div>
   </div>
 </div>
